--- a/index.html
+++ b/index.html
@@ -1,113 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- main css -->
+    <link rel="stylesheet" href="/css/style.css" />
+    <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/a076d05399.js"> -->
+    <!-- google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Courgette"
+      rel="stylesheet"
+    />
 
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <!-- bootstrap css -->
- <link rel="stylesheet" href="css/bootstrap.min.css">
- <!-- main css -->
- <link rel="stylesheet" href="/css/style.css">
- <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/a076d05399.js"> -->
- <!-- google fonts -->
- <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
- <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!-- bootstrap cdn -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
 
- <!-- bootstrap cdn -->
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
- 
- <!-- Google fonts -->
- <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
- <!-- <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"> -->
- <!-- <link href= "https://fonts.googleapis.com/css?family=Playfair Display|Tangerine|Do Hyeon|Roboto|Lora+Sans"> -->
+    <!-- Google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"> -->
+    <!-- <link href= "https://fonts.googleapis.com/css?family=Playfair Display|Tangerine|Do Hyeon|Roboto|Lora+Sans"> -->
 
+    <!-- bootstrap cdn -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
 
-  <!-- bootstrap cdn -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet"   href="nhttps://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  </head>
 
- <!-- <link rel="stylesheet"   href="nhttps://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-</head>
-
-<body>
+  <body>
     <div class="wrap">
-    <div class="container" style="position: relative;">
+      <div class="container" style="position: relative;">
         <div class="row">
-            <div class="col-md-6">
-                <h1 class="glocery-header" >GROCERY SHOPPING APP</h1>
-                <p>People are using various websites and items to shop groceries items everyday. When the shop is bad, they move another website or app. </p>
-                <p>Usage of various online sopping plat forms are rapidely growing but nobody is addressing the real needs and and pain points of users to fullfil the need of the users  we designed this classified website</p>
-            </div>
-            <div class="col-md-6">
-                <img src="/img/second.svg" class="first-img" alt="gloceries" style="width:450px; height: 400px;" >
-            </div>
-        </div>  
-
-        <div class="row ">
-            <div class="col-md-6">
-                <img src="/img/challeng.png" class="second-img" alt="gloceries" style="width:490px; height: 400px;" >
-            </div>            
-            <div class="col-md-6">
-                <h1>CHALLENGE</h1>
-                <p>People are using various websites and items to shop groceries items everyday. When the shop is bad, they move another website or app. </p>
-                <p>Usage of various online sopping plat forms are rapidely growing but nobody is addressing the real needs and and pain points of users to fullfil the need of the users  we designed this classified website</p>
-            </div>
-        </div> 
-
-        <div class="row">
-            <div class="col-md-12">
-                <h1>SOLUTION</h1>
-                <p>From this design we are solving above mentioned problems and giving solutions to make life easier for  people</p>
-            </div>
+          <div class="col-md-6">
+            <h1 class="glocery-header">GROCERY SHOPPING APP</h1>
+            <p>
+              People are using various websites and items to shop groceries
+              items everyday. When the shop is bad, they move another website or
+              app.
+            </p>
+            <p>
+              Usage of various online sopping plat forms are rapidely growing
+              but nobody is addressing the real needs and and pain points of
+              users to fullfil the need of the users we designed this classified
+              website
+            </p>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="/img/second.svg"
+              class="first-img"
+              alt="gloceries"
+              style="width: 450px; height: 400px;"
+            />
+          </div>
         </div>
 
         <div class="row">
-            <div class="col-md-6">
-                <img src="/img/third.svg" class="third-img" alt="gloceries" style="width:400px; height: 350px;">
-            </div>            
-            <div class="col-md-6">
-                <h1 class="info-header">1 Proper Information architecture</h1>
-                <p>People are using various websites and items to shop groceries items everyday. When the shop is bad, they move another website or app. </p>
-                <p>Usage of various online sopping plat forms are rapidely growing but nobody is addressing the real needs and and pain points of users to fullfil the need of the users  we designed this classified website</p>
-            </div>
-        </div> 
+          <div class="col-md-6">
+            <img
+              src="/img/challeng.png"
+              class="second-img"
+              alt="gloceries"
+              style="width: 490px; height: 400px;"
+            />
+          </div>
+          <div class="col-md-6">
+            <h1>CHALLENGE</h1>
+            <p>
+              People are using various websites and items to shop groceries
+              items everyday. When the shop is bad, they move another website or
+              app.
+            </p>
+            <p>
+              Usage of various online sopping plat forms are rapidely growing
+              but nobody is addressing the real needs and and pain points of
+              users to fullfil the need of the users we designed this classified
+              website
+            </p>
+          </div>
+        </div>
 
         <div class="row">
-            <div class="col-md-6">
-                <h1 class="info-header">2 Understanding need</h1>
-                <h3>understand</h3>
-                <p>People are using various websites and items to shop groceries items everyday. When the shop is bad, they move another website or app. </p>
-                <h3>Ideation</h3>
-                <p>Usage of various online sopping plat forms are rapidely growing but nobody is addressing the real needs and and pain points of users to fullfil the need of the users  we designed this classified website</p>
-            </div>
-            <div class="col-md-6">
-                <img src="/img/understand.png" alt="gloceries" style="width:450px; height: 350px;" >
-            </div>
-        </div> 
-    </div>
-    <div class="wrapper">
-        <div class="content" style="position: relative;" >
-                <div class="item" style="z-index: 1; position: absolute;">
-                    <img src="/img/last.svg" alt="gloceries" style="width:90%; height: 350px;" >
-                </div>
-                <div class="item" style="z-index: 2; position: absolute; left: 100px; top: 100px;">
-                    <!-- <h1 class="info-header">2 Understanding need</h1> -->
-                    <img src="/img/last.svg" alt="gloceries" style="width:90%; height: 350px;" >
-                </div>
-                <div class="item" style="z-index: 3; position: absolute; left: 200px; top: 200px;">
-                    <img src="/img/last.svg" alt="gloceries" style="width:90%; height: 350px;" >
-                </div>
-                    <!-- <p>People are using various websites and items to shop groceries items everyday. When the shop is bad, they move another website or app. </p> -->
+          <div class="col-md-12">
+            <h1>SOLUTION</h1>
+            <p>
+              From this design we are solving above mentioned problems and
+              giving solutions to make life easier for people
+            </p>
+          </div>
         </div>
-    </div>
 
-</div>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="/img/third.svg"
+              class="third-img"
+              alt="gloceries"
+              style="width: 400px; height: 350px;"
+            />
+          </div>
+          <div class="col-md-6">
+            <h1 class="info-header">1 Proper Information architecture</h1>
+            <p>
+              People are using various websites and items to shop groceries
+              items everyday. When the shop is bad, they move another website or
+              app.
+            </p>
+            <p>
+              Usage of various online sopping plat forms are rapidely growing
+              but nobody is addressing the real needs and and pain points of
+              users to fullfil the need of the users we designed this classified
+              website
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <h1 class="info-header">2 Understanding need</h1>
+            <h3>understand</h3>
+            <p>
+              People are using various websites and items to shop groceries
+              items everyday. When the shop is bad, they move another website or
+              app.
+            </p>
+            <h3>Ideation</h3>
+            <p>
+              Usage of various online sopping plat forms are rapidely growing
+              but nobody is addressing the real needs and and pain points of
+              users to fullfil the need of the users we designed this classified
+              website
+            </p>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="/img/understand.png"
+              alt="gloceries"rious online sopping plat forms are rapidely growing
+              but nobody is addressing the real needs and and pain points of
+              users to
+              style="width: 450px; height: 350px;"
+            />
+          </div>
+        </div>
+      </div>
+      
+      <div class="wrapper">
+        <div class="content" style="position: relative;">
+          <div class="item" style="z-index: 1; position: absolute;">
+            <img
+              src="/img/last.svg"
+              alt="gloceries"
+              style="width: 90%; height: 350px;"
+            />
+          </div>
+          <div
+            class="item"
+            style="z-index: 2; position: absolute; left: 100px; top: 100px;"
+          >
+            <!-- <h1 class="info-header">2 Understanding need</h1> -->
+            <img
+              src="/img/last.svg"
+              alt="gloceries"
+              style="width: 90%; height: 350px;"
+            />
+          </div>
+          <div
+            class="item"
+            style="z-index: 3; position: absolute; left: 200px; top: 200px;"
+          >
+            <img
+              src="/img/last.svg"
+              alt="gloceries"
+              style="width: 90%; height: 350px;"
+            />
+          </div>
+          <!-- <p>People are using various websites and items to shop groceries items everyday. When the shop is bad, they move another website or app. </p> -->
+        </div>
+      </div>
+
+
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
-</body>
-
+  </body>
 </html>
