added child combinator selector

--- a/footer.html
+++ b/footer.html
@@ -54,7 +54,7 @@
                 </div>
               </div>  
               <div class="card">
-                <div class="card-body" style="display: flex;">
+                <div class="card-body item">
                     <div class="photo">
                       <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                     </div>
@@ -64,7 +64,7 @@
                   </div>
                 </div>
 
-                <div class="card-body" style="display: flex;">
+                <div class="card-body item">
                   <div class="photo">
                     <img src="./img/profileBoy.jpg" class="photo" alt="profile-photo" />
                   </div>
@@ -74,7 +74,7 @@
                 </div>
                </div>
 
-                <div class="card-body" style="display: flex;">
+                <div class="card-body item">
                     <div class="photo">
                       <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                     </div>
@@ -84,7 +84,7 @@
                   </div>
                 </div>
 
-                <div class="card-body" style="display: flex;">
+                <div class="card-body item">
                   <div class="photo">
                     <img src="./img/profileBoy.jpg" class="photo" alt="profile-photo" />
                   </div>
