--- a/footer.html
+++ b/footer.html
@@ -59,7 +59,8 @@
                       <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                     </div>
                     <div class="profile">
-                      <h5 class="card-title">Prathi Srinivas</h5>
+                      <h5 class="card-title">Prathi Srinivas</h5>    
+                      <!-- <span>a month ago</span> -->
                       <p class="card-text">Amazing work</p>
                   </div>
                 </div>
@@ -79,18 +80,28 @@
                       <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                     </div>
                     <div class="profile">
-                      <h5 class="card-title">Special title treatment</h5>
+                      <h5 class="card-title">Veronika Max </h5>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                   </div>
                 </div>
 
                 <div class="card-body item">
                   <div class="photo">
+                    <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
+                  </div>
+                  <div class="profile">
+                    <h5 class="card-title">Veronika Max </h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+
+                <div class="card-body item">
+                  <div class="photo">
                     <img src="./img/profileBoy.jpg" class="photo" alt="profile-photo" />
                   </div>
                   <div class="profile">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Mohamed Zuhry Mohamed Fayes</h5>
+                    <p class="card-text">WooooW .. Next Level .... Awesome ...</p>
                 </div>
               </div>
               
@@ -99,11 +110,25 @@
 
             <div class="col-md-4 second">
               <div class="card">
+                <div class="card-body item">
+                    <div class="photo">
+                      <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
+                    </div>
+                    <div class="profile">
+                      <h5 class="card-title">Sandun Fernando</h5>
+                      <p class="card-text">Moratuwa, Sri Lanka</p>
+                      <a href="#" class="btn btn-primary">Follow</a>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Grocery Shopping App</h5>
+                  <p class="card-text">People are using various websites & apps to shop groceries every day. When the experience is bad, people shift to another website or app Usage f</p>
                   <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                 </div>
               </div>
 
