more styling to footer

--- a/footer.html
+++ b/footer.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="profile">
                       <h5 class="card-title">Prathi Srinivas</h5>    
-                      <!-- <span>a month ago</span> -->
+                      <span> . a month ago</span>
                       <p class="card-text">Amazing work</p>
                   </div>
                 </div>
@@ -71,6 +71,7 @@
                   </div>
                   <div class="profile">
                     <h5 class="card-title">Geethu Sebastian </h5>
+                    <span> . a month ago</span>
                     <p class="card-text">Keep up the good work!</p>
                 </div>
                </div>
@@ -81,6 +82,7 @@
                     </div>
                     <div class="profile">
                       <h5 class="card-title">Veronika Max </h5>
+                      <span> . 2 months ago</span>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                   </div>
                 </div>
@@ -91,6 +93,7 @@
                   </div>
                   <div class="profile">
                     <h5 class="card-title">Veronika Max </h5>
+                    <span> . 2 months ago</span>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                 </div>
               </div>
@@ -101,6 +104,7 @@
                   </div>
                   <div class="profile">
                     <h5 class="card-title">Mohamed Zuhry Mohamed Fayes</h5>
+                    <span> . 3 months ago</span>
                     <p class="card-text">WooooW .. Next Level .... Awesome ...</p>
                 </div>
               </div>
@@ -114,29 +118,32 @@
                     <div class="photo">
                       <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                     </div>
-                    <div class="profile">
-                      <h5 class="card-title">Sandun Fernando</h5>
-                      <p class="card-text">Moratuwa, Sri Lanka</p>
-                      <a href="#" class="btn btn-primary">Follow</a>
+                    <div class="">
+                      <h5 class="head">Sandun Fernando</h5>
+                      <i class="fas fa-map-marker"></i><span class="card-text ml-2">Moratuwa, Sri Lanka</span>
+                      <a href="#" class="btn btn-primary" style="height: 25px;text-align: center;">Follow</a>
                   </div>
                 </div>
               </div>
 
-
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Grocery Shopping App</h5>
+                  <h5 class="head">Grocery Shopping App</h5>
                   <p class="card-text">People are using various websites & apps to shop groceries every day. When the experience is bad, people shift to another website or app Usage f</p>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  <div class="action">
+                    <i class="fas fa-thumbs-up">52</i>
+                    <i class="fas fa-eye">1.2k</i>
+                    <i class="fas fa-comment-alt">6</i>
+                  </div>
+                  <p class="card-subtitle mt-2 text-muted">Published: June 7th 2020</p>
                 </div>
               </div>
 
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h5 class="head">Web Design,UI/UX,Web Development</h5>
+                  <i class="fab fa-adobe"></i>
+                  <i class="fab fa-adobe"></i>
                   <a href="#" class="card-link">Card link</a>
                   <a href="#" class="card-link">Another link</a>
                 </div>
