--- a/footer.html
+++ b/footer.html
@@ -121,7 +121,7 @@
                     <div class="">
                       <h5 class="head">Sandun Fernando</h5>
                       <i class="fas fa-map-marker"></i><span class="card-text ml-2">Moratuwa, Sri Lanka</span>
-                      <a href="#" class="btn btn-primary" style="height: 25px;text-align: center;">Follow</a>
+                      <button href="#" class="btn btn-primary" style="border-radius: 30px;font-size: 0.7em;">Follow</button>
                   </div>
                 </div>
               </div>
@@ -141,11 +141,12 @@
 
               <div class="card">
                 <div class="card-body">
+                  <!-- <p href="#" class="card-subtitle">CREATIVE FIELDS</p> -->
+                  <i class="fab fa-adobe"></i>
+                  <i class="fab fa-adobe"></i>
+                  <h5 class="head">Sketch App</h5>
                   <h5 class="head">Web Design,UI/UX,Web Development</h5>
-                  <i class="fab fa-adobe"></i>
-                  <i class="fab fa-adobe"></i>
-                  <a href="#" class="card-link">Card link</a>
-                  <a href="#" class="card-link">Another link</a>
+                  <!-- <p href="#" class="card-subtitle">CREATIVE FIELDS</p> -->
                 </div>
               </div>
 
@@ -160,6 +161,7 @@
                   <button href="#" class="btn btn-outline-dark">UI</button>
                   <button href="#" class="btn btn-outline-dark">UX</button>
                   <button href="#" class="btn btn-outline-dark">WEB</button>
+                  <button href="#" class="btn btn-outline-dark">DESIGN</button>
                 </div>
               </div>
             </div>
