refactoring footer styling

--- a/footer.html
+++ b/footer.html
@@ -45,7 +45,7 @@
             <div class="col-md-8 first">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title header">Sign up to join the conversation</h5>
+                  <h5 class="card-title footer-header">Sign up to join the conversation</h5>
                   <p class="card-text">Add your feedback for Sandun Fernando’s project by signing in or signing up.</p>
                   <a href="#" class="btn btn-primary">Sign Up with email</a>
                   <i class="fab fa-facebook"></i>
@@ -112,7 +112,7 @@
               </div>            
             </div>
 
-            <div class="col-md-4 second">
+            <div class="col-md-4 column-two">
               <div class="card">
                 <div class="card-body item">
                     <div class="photo">
@@ -141,12 +141,12 @@
 
               <div class="card">
                 <div class="card-body">
-                  <!-- <p href="#" class="card-subtitle">CREATIVE FIELDS</p> -->
                   <i class="fab fa-adobe"></i>
                   <i class="fab fa-adobe"></i>
+                  <h6 class="text-muted">TOOLS</h6>
                   <h5 class="head">Sketch App</h5>
                   <h5 class="head">Web Design,UI/UX,Web Development</h5>
-                  <!-- <p href="#" class="card-subtitle">CREATIVE FIELDS</p> -->
+                  <h6 class="text-muted">CREATIVE FIELDS</h6>
                 </div>
               </div>
 
