fix shrinked image

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
             <div class="card footer-card">
               <div class="card-body footer-body item">
-                  <div class="photo">
+                  <div class="">
                     <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                   </div>
                   <div class="profile">
@@ -224,7 +224,7 @@
               </div>
 
               <div class="card-body footer-body item">
-                <div class="photo">
+                <div class="">
                   <img src="./img/profileBoy.jpg" class="photo" alt="profile-photo" />
                 </div>
                 <div class="profile">
@@ -235,7 +235,7 @@
              </div>
 
               <div class="card-body footer-body item">
-                  <div class="photo">
+                  <div class="">
                     <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                   </div>
                   <div class="profile">
@@ -246,7 +246,7 @@
               </div>
 
               <div class="card-body footer-body item">
-                <div class="photo">
+                <div class="">
                   <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                 </div>
                 <div class="profile">
@@ -257,7 +257,7 @@
             </div>
 
               <div class="card-body footer-body item">
-                <div class="photo">
+                <div class="">
                   <img src="./img/profileBoy.jpg" class="photo" alt="profile-photo" />
                 </div>
                 <div class="profile">
@@ -273,7 +273,7 @@
           <div class="col-md-4 column-two">
             <div class="card footer-card">
               <div class="card-body footer-body item">
-                  <div class="photo">
+                  <div class="">
                     <img src="./img/profile.jpeg" class="photo" alt="profile-photo" />
                   </div>
                   <div class="">
